add redux/bottom modal/nextauth

--- a/package.json
+++ b/package.json
@@ -10,16 +10,25 @@
     "start": "next start"
   },
   "dependencies": {
-    "@prisma/client": "^4.11.0",
-    "@tanstack/react-query": "^4.28.0",
+    "@choko-wallet/auth-client": "0.1.10-19",
+    "@choko-wallet/core": "0.1.10-19",
+    "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^1.0.6",
+    "@prisma/client": "^4.11.0",
+    "@reduxjs/toolkit": "^1.9.3",
+    "@skyekiwi/util": "^1.0.1",
+    "@tanstack/react-query": "^4.28.0",
     "@trpc/client": "^10.18.0",
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
+    "dayjs": "^1.11.7",
     "next": "^13.2.4",
+    "next-auth": "^4.21.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
+    "superagent": "^8.0.9",
     "superjson": "1.12.2",
     "zod": "^3.21.4"
   },
