--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@choko-wallet/auth-client": "0.1.10-19",
     "@choko-wallet/core": "0.1.10-19",
+    "@choko-wallet/abi": "0.1.10-19",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^1.0.6",
     "@prisma/client": "^4.11.0",
@@ -28,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
+    "react-spinners": "^0.13.8",
     "superagent": "^8.0.9",
     "superjson": "1.12.2",
     "zod": "^3.21.4"
