--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@choko-wallet/abi": "0.1.10-19",
     "@choko-wallet/auth-client": "0.1.10-19",
     "@choko-wallet/core": "0.1.10-19",
-    "@choko-wallet/abi": "0.1.10-19",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^1.0.6",
     "@prisma/client": "^4.11.0",
@@ -32,6 +32,7 @@
     "react-spinners": "^0.13.8",
     "superagent": "^8.0.9",
     "superjson": "1.12.2",
+    "swiper": "^9.2.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
