--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
     "dayjs": "^1.11.7",
+    "framer-motion": "^10.11.2",
     "next": "^13.2.4",
     "next-auth": "^4.21.0",
     "react": "18.2.0",
