--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
     "react-spinners": "^0.13.8",
+    "sharp": "^0.32.0",
     "superagent": "^8.0.9",
     "superjson": "1.12.2",
     "swiper": "^9.2.0",
